# frappe_qr

./: README.md  pyproject.toml
frappe_qr/: hooks.py  modules.txt
